# eco-rs

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  angular.json  commitlint.config.js  eslint.config.js  lint-staged.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.docker/: Dockerfile  README.md
.github/actions/setup-build/: action.yml
.github/actions/setup-sidecars/: action.yml
.github/workflows/: build.yml  ci-cd.yml  ci.yml  docker-image.yml  release.yml
.husky/: pre-commit  pre-push
docs/: API.md  BACKEND.md  ECOINDEX.md  FRONTEND.md
lighthouse-sidecar/: package.json  pnpm-lock.yaml  tsconfig.json
lighthouse-sidecar/src/: config.ts  index.ts  node-main.mjs  runner.ts  types.ts
scripts/: build-sidecar.js  bump-version.mjs  bundle-lighthouse.mjs  download-chrome.js  download-chrome.mjs  download-node.mjs  postinstall.mjs  prepare-release.js
src/: styles.css  styles.scss  test-setup.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/analytics/: cache_stats.rs  domain_stats.rs  duplicate_stats.rs  mod.rs  protocol_stats.rs
src-tauri/src/browser/: collector.rs  launcher.rs  mod.rs
src-tauri/src/calculator/: ecoindex.rs  mod.rs
src-tauri/src/commands/: analyze.rs  lighthouse.rs  mod.rs
src-tauri/src/domain/: ecoindex.rs  lighthouse.rs  metrics.rs  mod.rs  quantiles.rs
src-tauri/src/errors/: browser.rs  mod.rs  sidecar.rs
src-tauri/src/sidecar/: lighthouse.rs  mod.rs
src-tauri/src/utils/: mod.rs  paths.rs
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
src/app/core/models/: analysis.model.ts  ecoindex.model.ts  index.ts  lighthouse.model.ts
src/app/core/services/: analyzer.service.spec.ts  analyzer.service.ts  history.service.ts  index.ts
src/app/core/utils/: grade-colors.util.spec.ts  grade-colors.util.ts  index.ts
src/app/features/analyzer/: analyzer.component.ts
src/app/features/analyzer/components/analysis-options/: analysis-options.component.ts
src/app/features/analyzer/components/loading-indicator/: loading-indicator.component.ts
src/app/features/analyzer/components/url-input/: url-input.component.ts
src/app/features/results/: results.component.ts
src/app/features/results/components/cache-analysis/: cache-analysis.component.ts
src/app/features/results/components/cache-issues/: cache-issues.component.ts
src/app/features/results/components/core-metrics/: core-metrics.component.ts
src/app/features/results/components/coverage-section/: coverage-section.component.ts
src/app/features/results/components/domain-stats/: domain-stats.component.ts
src/app/features/results/components/duplicates/: duplicates.component.ts
src/app/features/results/components/ecoindex-card/: ecoindex-card.component.ts
src/app/features/results/components/ecoindex-gauge/: ecoindex-gauge.component.ts
src/app/features/results/components/environmental-impact/: environmental-impact.component.ts
src/app/features/results/components/hero-section/: hero-section.component.ts
src/app/features/results/components/images-section/: images-section.component.ts
src/app/shared/: index.ts
src/app/shared/components/progress-ring/: progress-ring.component.ts
src/app/shared/components/score-badge/: score-badge.component.ts
src/app/shared/pipes/: format-bytes.pipe.ts
src/styles/: tailwind.css
(+6 files in other folders)
