[package]
name = "ecoindex-app"
version = "0.0.1-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ecoindex_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Chrome DevTools Protocol
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# Logging
log = "0.4"
simplelog = "0.12"

# Platform-specific paths (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
dirs = "6"

[features]
default = []
integration-tests = []

# Linting configuration
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Categories
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Strict lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Performance lints
inefficient_to_string = "deny"
large_enum_variant = "warn"
needless_pass_by_value = "warn"

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

